DBC22-5561: resolve conflicts with main
DBC22-5561: frontend implementation for weathernet data replacement

DBC22-5562: fixed the horizontal scroll bar issue of side panel

DBC22-5562: removed code no needed

DBC22-5561: removed duplicated api call and .env variable

DBC22-5561: removed duplicated api call

DBC22-5561: removed duplicated variables

DBC22-5561: calculated high/low temps by period text

DBC22-5561: fix test cases failure

DBC22-5561: fix test data error

DBC22-5562: fix sonarcloud warnings

DBC22-5562: fix sonarcloud warnings

DBC22-5562: fix sonarcloud warnings

DBC22-5562: combined local and reginal forecast carousel togeter

DBC22-5561: voided api call when station does not exist in db

DBC22-5561: fixed the issue that high/low temps displayed incorrectly

DBC22-5562: removed redundant temps

DBC22-5561: added test cases for loacal weather functions

DBC22-5561: allow now station can be added

DBC22-5561: fixed test failures

DBC22-5561: fix sonarqube warnings

DBC22-5561: fix sonarqube warnings

DBC22-5561: fix sonarqube warnings

--- a/src/frontend/src/Components/map/panels/weather/LocalWeatherPanel.scss
+++ b/src/frontend/src/Components/map/panels/weather/LocalWeatherPanel.scss
@@ -3,6 +3,11 @@
 .popup {
   // Local weather popup
   &--weather--local {
+    .section-title {
+      font-size: 1rem;
+      font-weight: 700;
+      text-align: left;
+    }
     .popup__title {
       background-color: $Grey30;
 
@@ -19,7 +24,8 @@
     .popup__content {
       display: flex;
       flex-direction: column;
-      height: 100%; 
+      height: 100%;
+      overflow-x: hidden; 
 
       p {
         margin-bottom: 0;
